Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+<img src="">
+<img src="" alt="lion roaring">
+<img src="" alt="lion roaring" title = "lion picture">
 </body>
 </html>
