--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <!-- Your code here -->
-<img src="">
-<img src="" alt="lion roaring">
-<img src="" alt="lion roaring" title = "lion picture">
+<img src="https://en.wikipedia.org/wiki/Flatiron_School#/media/File:FS_wiki.png">
+<img src="https://en.wikipedia.org/wiki/Flatiron_School#/media/File:FS_wiki.png" alt="lion roaring">
+<img src="https://en.wikipedia.org/wiki/Flatiron_School#/media/File:FS_wiki.png" alt="lion roaring" title = "lion picture">
 </body>
 </html>
